--- a/locale/ru.json
+++ b/locale/ru.json
@@ -43,6 +43,7 @@
   "temperature 5": "температура 5",
   "radiator T1": "Темп. радиатора 1",
   "radiator T2": "Темп. радиатора 2",
+  "NTC coeffiecient": "Коэффициет NTC",
   "V": "В",
   "A": "А",
   "W": "Вт",
@@ -89,6 +90,7 @@
   "calibrate I, V, P": "калибровать I, V, P",
   "new version is available!": "доступна новая версия!",
   "update now?": "обновить сейчас?",
+  "udpate installed, press f5 to reaload window": "обновление установлено, нажмите f5 чтобы перезагрузить страницу",
   "yes": "да",
   "no": "нет",
   "installing update, it may take a long time": "установка обновления... Это может тянуться долго...",
