--- a/locale/ru.json
+++ b/locale/ru.json
@@ -43,7 +43,7 @@
   "temperature 5": "температура 5",
   "radiator T1": "Темп. радиатора 1",
   "radiator T2": "Темп. радиатора 2",
-  "NTC coeffiecient": "Коэффициет NTC",
+  "NTC coefficient": "Коэффициет NTC",
   "V": "В",
   "A": "А",
   "W": "Вт",
