update stabilize label

--- a/locale/ru.json
+++ b/locale/ru.json
@@ -103,7 +103,7 @@
   "stabilization mode": "режим стабилизации",
   "stabilize max": "по верхней",
   "stabilize mid": "по средней",
-  "stabilize off": "стаб откл, вент макс",
+  "stabilize off": "стаб откл",
   "P stabilization coefficient": "Коэффициент стаб. P",
   "I stabilization coefficient": "Коэффициент стаб. I",
   "D stabilization coefficient": "Коэффициент стаб. D",
