--- a/locale/ru.json
+++ b/locale/ru.json
@@ -103,6 +103,7 @@
   "stabilization mode": "режим стабилизации",
   "stabilize max": "по верхней",
   "stabilize mid": "по средней",
+  "stabilize selected": "по выбранным",
   "stabilize off": "стаб откл",
   "P stabilization coefficient": "Коэффициент стаб. P",
   "I stabilization coefficient": "Коэффициент стаб. I",
