Squashed commit 1kw changes

--- a/locale/ru.json
+++ b/locale/ru.json
@@ -7,6 +7,9 @@
   "temperature": "температура",
   "purge duration": "длительность продувки",
   "purge delay": "задержка продувки",
+  "first purge delay": "задержка 1 продувки",
+  "first purge duration": "длительность 1 продувки",
+  "first purge cycles": "кол-во циклов 1 продувки",
   "H2 pressure": "давление H2",
   "H2 consumption": "расход H2",
   "voltage, V": "напряжение, В",
@@ -18,11 +21,13 @@
   "load": "нагрузка",
   "temperatures": "температуры",
   "temperature stabilization": "стабилизация температуры",
+  "temperature sensor K": "коэффициент датчика температуры",
   "stabilization temperature": "температура стабилизации",
   "load disabled": "нагрузка отключена",
   "max temperature": "максимальная температура",
   "min voltage": "минимальное напряжение",
   "min pressure": "минимальное давление",
+  "max pressure": "максимальное давление",
   "valve": "клапан",
   "fuel cell": "БТЭ",
   "load mode": "режим нагрузки",
@@ -38,6 +43,7 @@
   "temperature 5": "температура 5",
   "radiator T1": "Темп. радиатора 1",
   "radiator T2": "Темп. радиатора 2",
+  "NTC coefficient": "Коэффициет NTC",
   "V": "В",
   "A": "А",
   "W": "Вт",
@@ -84,6 +90,7 @@
   "calibrate I, V, P": "калибровать I, V, P",
   "new version is available!": "доступна новая версия!",
   "update now?": "обновить сейчас?",
+  "udpate installed, press f5 to reaload window": "обновление установлено, нажмите f5 чтобы перезагрузить страницу",
   "yes": "да",
   "no": "нет",
   "installing update, it may take a long time": "установка обновления... Это может тянуться долго...",
@@ -91,5 +98,15 @@
   "parameters": "параметры",
   "script": "алгоритм",
   "script executed!": "автоматическое исполнение завершено!",
-  "value": "значение"
+  "value": "значение",
+  "short circuit allowed": "КЗ разрешено",
+  "stabilization mode": "режим стабилизации",
+  "stabilize max": "по верхней",
+  "stabilize mid": "по средней",
+  "stabilize selected": "по выбранным",
+  "stabilize off": "стаб откл",
+  "P stabilization coefficient": "Коэффициент стаб. P",
+  "I stabilization coefficient": "Коэффициент стаб. I",
+  "D stabilization coefficient": "Коэффициент стаб. D",
+  "current stabilization temperature": "Текущая температура стабилизации"
 }
