add fan coefficient

--- a/locale/ru.json
+++ b/locale/ru.json
@@ -108,5 +108,6 @@
   "P stabilization coefficient": "Коэффициент стаб. P",
   "I stabilization coefficient": "Коэффициент стаб. I",
   "D stabilization coefficient": "Коэффициент стаб. D",
-  "current stabilization temperature": "Текущая температура стабилизации"
+  "current stabilization temperature": "Текущая температура стабилизации",
+  "fan coefficient": "Коэффициет вентилятора"
 }
